<resources>
    <string name="app_name">UTS AKB 10117143</string>
    <string name="next">Next</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="this_is_gallery">This Is Gallery</string>
    <string name="desc">Hello guys let me introduce my self,  My name is Ikbal Padilah, in the school my friends called me bale. I was born in Sukabumi , 1st January 1999. I live in Sukabumi, and stay in Tubagus Ismail  I’m the first child of two siblings</string>
    <string name="desc2">that\'s what I can tell you about, thank you</string>
    <string name="intrst">"My hobbies are watching movie, hangout with my friends, hunting photography. My favorite food are meatboals and instan noodles. "</string>
    <string name="friends_list">Friends List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="profile1">PROFILE</string>
    <string name="interest">INTEREST</string>


    <string-array name="listdailyact">
        <item>Suhoor</item>
        <item>Sholat</item>
        <item>Doing Tasks</item>
        <item>Shop Online</item>
        <item>Iftar</item>
        <item>Sleep</item>
    </string-array>

    <string-array name="desc_listdailyact">
        <item>Wake up at 3am then go to the toilet, then eat for doing suhoor.</item>
        <item>Sholat 5 times and sholat tarawih.</item>
        <item>College assignments are really many, make me insane.</item>
        <item>Check out at Shopee every day every times with my family.</item>
        <item>Iftar, fill the stomach with food until it is full aka. eat again.</item>
        <item>Sleep a second because I have to finish my college assignments again.</item>
    </string-array>




    <string-array name="listtitlemusic">
        <item>Bitterlove</item>
        <item>Into The Unknow</item>
        <item>Ego</item>
        <item>Lie To Me</item>
        <item>Cool</item>
        <item>Cigarettes of Ours</item>
        <item>Easier</item>
    </string-array>

    <string-array name="listmusic">
        <item>Ardhito Pramono</item>
        <item>Panic! At The Disco</item>
        <item>LYON</item>
        <item>5 Second of Summer</item>
        <item>Jonas Brother</item>
        <item>Ardhito Pramono</item>
        <item>5 Second of Summer</item>
    </string-array>


</resources>



