<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragHome">


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/profile1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="110dp" />

            <ImageView
                android:id="@+id/gal1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="105dp"
                android:src="@drawable/img_pp"
                android:contentDescription="@string/todo"
                android:layout_marginStart="105dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="322dp"
                android:layout_height="89dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:paddingStart="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/interest"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="110dp" />

            <TextView
                android:id="@+id/textIntrs"
                android:layout_width="322dp"
                android:layout_height="63dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:text="@string/intrst"
                android:textColor="@color/black"
                android:paddingStart="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="323dp"
                android:layout_height="43dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:text="@string/desc2"
                android:textColor="@color/black"
                android:paddingStart="20dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>