<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_dailyact_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/dailyact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_dailyact_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_dailyact_text"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/dailyact_text"
                app:layout_constraintTop_toBottomOf="@+id/dailyact_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>